--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: 'ReadUnread'
 description: 'sth. worth to be read.books,movies,stories.not about share,just about practice.'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
-baseurl: '/readunread'
+baseurl: ''
 disqus: 'readunread'
 email: 'icomesee@gmail.com'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
