update basic info

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 name: 'ReadUnread'
-description: 'sth. worth to be read.books,movies,stories.not about share,just about practice.'
+description: 'sth. worth to be read.books,movies,stories,etc.not about share,just for practice.'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 baseurl: ''
