--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ plugins:
   - jekyll-seo-tag
   
 authors:
-    Al:
+    al:
       name:           Al
       site:           https://consciousnessbowl.com
       avatar:         /assets/images/avatar1.jpg
@@ -27,7 +27,7 @@ authors:
       email:          admin@consciousnessbowl.com
       twitter:        https://twitter.com/zuo_life
 
-    Ex:
+    ex:
       name:           Ex
       site:           https://readunread.cn
       avatar:         /assets/images/avatar2.jpg
@@ -43,7 +43,7 @@ defaults:
       path: "_posts"
     values:
       layout: post
-      author: sal
+      author: al
       avatar: /assets/images/avatar1.jpg
       
   # all pages
