--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ authors:
       name:           Al
       site:           https://consciousnessbowl.com
       avatar:         assets/images/al.png
-      bio:            "好好学习 天天向上"
+      bio:            "只顾好好学习，来不及天天向上的Al"
       email:          admin@consciousnessbowl.com
       twitter:        https://twitter.com/zuo_life
 
