--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 name: 'ConsciousnessBowl'
-description: 'sth. worth to be read.books,movies,stories,etc.not about share,just for personal practice.'
+description: '意识培养皿，意识的碗。丢一些东西进去，假以时日，看看是否会像原始汤一样生长出一些东西来。'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 baseurl: ''
